examples/test/testpolicy18301.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18301
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key2: value34
      key48: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value21
          key7: value0
          key10: value39
      podSelector:
        matchLabels:
          key41: value30
          key12: value45
